安装时将环境变量写到配置文件 & 上传文件方式和大小优化
